add connectionPoolSize arg